--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<p>hello there it's me</p>
-<div>hello 2</div>
-<div>hey man</div>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+
+    <body>
+        <h2>heyyyy</h2>
+        <p>hello there it's me</p>
+        <div>hello 2</div>
+        <div>hey man</div>
+        
+    </body>
+</html>
