--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
+        <h1>hola</h1>
         <h2>heyyyy</h2>
+        <h3>yea</h3>
         <p>hello there it's me</p>
         <div>hello 2</div>
         <div>hey man</div>
